src/styles/additemstockmodal.css
.newItemModal.hide {
  display: none;
}

.newItemModal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(128, 128, 128, 0.842);
  backdrop-filter: blur(5px);
}

.newItemContainer {
  position: relative;
  left: 50%;
  top: 50%;
  width: fit-content;
  background-color: white;
  padding: 25px;
  transform: translateX(-50%) translateY(-50%);
  border-radius: 3px;
  box-shadow: 2px 2px 4px black;
}

.newItemInputContainer {
  display: flex;
}

.inputErrorNewItem.hide {
  display: none;
}

.inputErrorNewItem.show {
  width: 105px;
}

.inputErrorNewItem,
.duplicateError {
  border: 2px solid red;
  color: red;
}

.newAddItem {
  display: flex;
}

.headingDivs {
  display: flex;
}

.itemProperty,
.headingDivItem {
  width: 108px;
  overflow: hidden;
}

.newItemInput {
  width: 100px;
}

.duplicateError.hide {
  display: none;
}

.newItemInput {
  font-size: 1rem;
  padding: 3px;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  border-radius: 8px;
}

.newItemInput:focus {
  outline: 3px solid rgb(78, 3, 216);
  border-color: rgba(0, 0, 0, 0);
}

.modalBtn.remove.thing {
  border: none;
}

.modalBtn,
.newItemAddBtn {
  width: fit-content;
  display: flex;
  align-items: center;
  gap: 0.25rem;
  justify-content: center;
  border: 3px solid rgb(78, 3, 216);
  color: rgb(78, 3, 216);
  border-radius: 5px;
  background: none;
  font-weight: 600;
  font-size: 1rem;
  transition-duration: 0.4s;
  padding: 10px;
}
.newItemAddBtn:hover,
.modalBtn.remove.thing:hover,
.modalBtn:hover {
  border-color: rgb(78, 3, 216);
  background-color: rgb(78, 3, 216);
  box-shadow: 2px 2px 4px rgb(0, 0, 0);
  color: white;
  cursor: pointer;
}

.newItemBoxes {
  display: flex;
  flex-direction: column;
  align-items: left;
}

.newItemBtnHolder {
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  width: fit-content;
  display: flex;
  gap: 1rem;
  margin-top: 25px;
}

.newItemModalBtn {
  width: fit-content;
  display: flex;
  align-items: center;
  gap: 0.25rem;
  justify-content: center;
  border: 3px solid rgb(78, 3, 216);
  color: rgb(78, 3, 216);
  border-radius: 5px;
  background: none;
  font-weight: 600;
  font-size: 1rem;
  transition-duration: 0.4s;
  padding: 10px;
}
.newItemModalBtn:hover {
  border-color: rgb(78, 3, 216);
  background-color: rgb(78, 3, 216);
  box-shadow: 2px 2px 4px rgb(0, 0, 0);
  color: white;
  cursor: pointer;
}

.newItemModalBtn.close {
  border: none;
}

